--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<div id="app">
-  <div ui-view>Hello World!</div>
-</div>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="index.pack.js"></script>
+    </body>
+</html>
